# python-ftfy

./: .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  README.txt  fixtext.py  ftfy.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml
docs/: Makefile  accuracy.rst  avoid.rst  bad_encodings.rst  cite.rst  cli.rst  conf.py  config.rst  detect.rst  encodings.rst  explain.rst  fixes.rst  heuristic.rst  index.rst  modules.rst  poem.txt
docs/_static/css/: custom.css
ftfy/: __init__.py  autodecode.py  badness.py  build_data.py  char_classes.py  chardata.py  cli.py  compatibility.py  fixes.py  formatting.py  guess_bytes.py  single_byte_characters.txt  test_real_tweets.py  test_unicode.py
ftfy/bad_codecs/: __init__.py  sloppy.py  sloppy_utf8.py  utf8_variants.py
ftfy/streamtester/: __init__.py  oauth.py  streamtester.py  twitter_tester.py
notebook/: ftfy talk.ipynb
notes/: mysteries.txt
scripts/: char_data_table.py
tests/: face.txt  halibote.txt  test_bytes.py  test_cases.json  test_characters.py  test_cli.py  test_encodings.py  test_entities.py  test_examples_in_json.py  test_futuristic_codepoints.py  test_real_text.py  test_real_tweets.py  test_synthetic.py  test_unicode.py
tests/test-cases/: README.md  in-the-wild.json  known-failures.json  language-names.json  negative.json  synthetic.json
