[project]
name = "ftfy"
version = "6.3.0"
description = "Fixes mojibake and other problems with Unicode, after the fact"
homepage = "https://ftfy.readthedocs.io/en/latest/"
documentation = "https://ftfy.readthedocs.io/en/latest/"
repository = "https://github.com/rspeer/python-ftfy"
authors = [{ name = "Robyn Speer", email = "rspeer@arborelia.net"}]
license = "Apache-2.0"
include = [
    { path = "README.md", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "tests", format = "sdist" },
]
readme = "README.md"
dependencies = [
    "wcwidth"
]
requires-python = ">=3.9"

[project.scripts]
ftfy = "ftfy.cli:main"

[project.urls]
Issues = "https://github.com/rspeer/python-ftfy/issues/"
Changelog = "https://github.com/rspeer/python-ftfy/blob/main/CHANGELOG.md"
Cohost = "https://cohost.org/arborelia"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "tox"
]

[tool.ruff]
exclude = ["badness.py"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "F", "I", "N", "ANN"]
ignore = ["ANN101", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
